form state added

--- a/src/style/style.module.css
+++ b/src/style/style.module.css
@@ -1,4 +1,4 @@
-.card {
+.from {
     display: inline-block;
     margin: 0 auto;
     height: auto;
@@ -8,24 +8,34 @@
     margin: 10px;
     transition: 0.5s;
 }
-.card:hover {
-    transform: scale(1.03);
+
+.h2 {
+    padding: 10px;
 }
 
-.card-title {
-    padding: 15px 0px 10px 0px;
+.cardMargin {
+    margin: 10px;
 }
-.card-text {
-    padding: 5px;
+
+.inputMarginLeft {
+    margin-left: 25px;
 }
-.card-btn {
+
+
+
+
+
+
+
+/* button  */
+.btn {
     padding: 8px;
     margin: 10px;
     border-radius: 5px;
     background: rgb(86, 202, 202);
     transition: 0.4s;
 }
-.card-btn:hover {
+.btn:hover {
     background: #53e473;
     transform: scale(1.05);
 }
