--- a/src/style/home.module.css
+++ b/src/style/home.module.css
@@ -6,3 +6,31 @@
     justify-content: center;
     align-items: center;
 }
+
+.counter {
+    width: auto;
+    height: auto;
+    background: rgb(25, 182, 121);
+    padding: 15px;
+    border: 1px solid aliceblue;
+    border-radius: 20px;
+}
+
+
+.count {
+    padding: 10px;
+    color: rgb(11, 13, 14);
+    font-weight: bold;
+}
+
+.btn {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.btn button {
+    padding: 5px 10px;
+    margin: 10px;
+    border-radius: 50%;
+    font-weight: bold;
+}
