delete button added

--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,37 @@
 
 }
 
+.card {
+  margin: 1rem;
+  padding: 1rem;
+  background-color: #282c34;
+  color: white;
+}
 
+.btn {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  width: 5rem;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.btn:hover {
+  background: orange;
+}
+
+section {
+  display: grid;
+}
+
+@media screen and (min-width: 600px) {
+  section {
+    grid-template-columns: auto auto;
+  }
+}
+
+@media screen and (min-width: 760px) {
+  section {
+    grid-template-columns: auto auto auto;
+  }
+}
