--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,20 @@
   background: orange;
 }
 
+.form {
+  padding: 10px;
+  margin: 10px;
+}
+
+.form input {
+  margin-left: 10px;
+  padding: 0.5rem;
+}
+
+.field-group {
+  margin-top: 10px;
+}
+
 section {
   display: grid;
 }
